--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2534,5 +2534,108 @@ stories:
   state: Texas
   domain: http://www.cliftonrecord.com/
   link: https://www.cliftonrecord.com/sports/iredell-posts-fourth-consecutive-victory
+images:
+- name: meadowbutterfly-meadow-butterfly-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-internet-numbers.jpg
+- name: containership-containership-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-copper-circuit.jpg
+- name: razorwire-DSC-0080-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-graham-sutherland.jpg
+- name: oldtrain-oldtrain-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
+- name: sand-hand-sand-hand-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
+- name: gypsy-wagon-gypsywagon-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-kand-two.jpg
+- name: 35201856153_61bc075e4b-rain-princess.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-rain-princess.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
+- name: death-valley-death-valley-national-park-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-monet-one.jpg
+- name: subway-subway-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-brush.jpg
+- name: cyber-api-description-wars-img-3820-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-3820-dark-dali.jpg
+- name: locked-up-steam-lock-up-steam-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-umberto-bocc.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-smoking-cigarette.jpg
+- name: stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+- name: abandonedbuildings_far_away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_far_away.jpg
+- name: beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+- name: meadowbutterfly-meadow-butterfly-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-ww2-color.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
+- name: store-on-corner-store-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-deep-connections.jpg
+- name: sand-hand-sand-hand-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-diego-rivera1.jpg
+- name: amusement-park-amusement-park-2-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-propaganda-leaflets.jpg
+- name: crow-crow-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
+- name: gypsy-wagon-gypsywagon-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-umberto-bocc.jpg
+- name: dragon-desert-desert-dragon-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-yellow-paper.jpg
+- name: power-lines-power-lines-empty-space-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dry-skin.jpg
+- name: eduardo-eduardo.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo.jpg
+- name: downtheline-downtheline-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gan-vogh.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
+- name: aws-s3-treeinhills-yellowtree-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-600.jpg
+- name: power-lines-power-lines-empty-space-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-neo-instinct.jpg
+- name: statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
+- name: downtown-los-angeles-downtown-la-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purp-paper.JPG
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
+- name: power-lines-power-lines-empty-space-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-dali.jpg
+- name: machine-road-machine-road-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-ww2-color.jpg
+- name: downtheline-downtheline-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-brush.jpg
+- name: old-gas-pumps-oldgaspumps-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kand-two.jpg
+- name: abandonedbuildings_kand_two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_kand_two.jpg
+- name: supreme-court-supremecourt-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-alien-goggles.jpg
+- name: old-barn-old-barn-1500-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-wols.jpg
+- name: store-on-corner-oldcabin-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dry-skin.jpg
+- name: ellis-island-ellisisland-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
+- name: blossombar-creativity-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-00-00.jpg
+- name: school-clouds-church-clouds-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit-4.jpg
+- name: mediterranean-mediterranean-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smoking-cigarette.jpg
+- name: containership-containership-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-4.jpg
+- name: cargo-ship-cargo-ship-on-sea-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-emily-carr.jpg
+- name: power-lines-power-lines-empty-space-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-constitution.jpg
+- name: cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
+- name: old-gas-pumps-oldgaspumps-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-plentiful.jpg
 ---
 Big Farms Find Easy Ways Around Trump Trade Aid Limits.&nbsp;Senior Sri Lanka Officials Ordered Detained Over Bombing.&nbsp;Some Big Farms Collect Big Checks From Trump Aid Package.&nbsp;Wilson Wins Half Marathon.&nbsp;Dock Dogs Returns To Ketchum This Weekend.&nbsp;Researcher Talks Impact Of Women In East Tennessee Settlement.&nbsp;Like Us On Facebook.&nbsp;Courthouse Annex Operations Displaced After Sewer Backup.&nbsp;
